﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version 1.1.0.10041 (v1.1) 2010-02-10
	General description:
		This second stable release adds checks for NaN, infinity, negative infinity, positive infinity on the
		types System.Double and System.Single.		

	Code changes:
		-32 new methods added on Single and Double for checking NaN, Infinity, NegativeInfinity and Positive-
		 Infinity.


Version 1.0.4.0 (v1.0) 2009-08-27
	General description:
		This first stable release has had a major face lift and several minor bug fixes. The API has changed 
		considerably and therefore this release is both binary and code incompatible with the previous beta. 
		Great change is the possibility to run CuttingEdge.Conditions on machines that do not have .NET 3.5 
		installed. While the assembly itself is still dependent on System.Core (.NET 3.5), users can safely 
		add it to their .NET 2.0 projects (as long as the C# 3.0 or VB9 compilers are used).
		
	Bug Fixes:
		-Evaluate(null) threw a NullReferenceException for work item 10545.
		 When the ValidationExtensions.Evaluate<T>(Expression<Func<T, bool>>) overload was called with a null
		 reference for the Expression argument, the method threw a NullReferenceException, while we expected
		 an ArgumentException or PostconditionException. The code was fixed and two unit tests are added to
		 prevent regression.
		-StackOverflowException was thrown when self-referencing collections were supplied for work item 10509.
		 When building an exception message, the library uses the supplied parameters of the validation
		 methods. The parameter was transformed to a string representation, which uses recursive calls to 
		 transform collections to it's string representation. Supplying a collection that referenced itself
		 caused a StackOverflowException. This method now checks it's recursive depth to prevent such an
		 exception.
		-Behavior of Contains, ContainsAll, and ContainsAny overloads changed for work item 10480.